Fix table width; include css rather than inlining
txhash wasn't overflowing into an ellipsis.

The css was meant to be included via a link rather than inlined.

--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -5,14 +5,6 @@ body {
     background-color: rgb(90%, 90%, 90%);
 }
 
-@media(max-width: 767px) {
-    body {
-        max-width: 100%;
-        display: flex;
-        flex-direction: column
-    }
-}
-
 h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
@@ -52,7 +44,7 @@ td {
 }
 
 table.mempool { width: 80%; max-width: 137ex; margin: 0 auto; }
-table.blocks { table-layout: fixed; max-width: 137ex; margin: 0 auto; }
+table.blocks { table-layout: fixed; width: 80%; max-width: 137ex; margin: 0 auto; }
 table.blocks td, table.blocks th {
     padding: 0 1ex 0 1ex;
     margin: 0;
